common-applications/test-environment/opengauss-website-revision/meetingserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meetingserver-deployment
  namespace: opengauss-website-revision
spec:
  selector:
    matchLabels:
      app: meetingserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: meetingserver
    spec:
      containers:
      - command:
        - /bin/bash
        - -c
        - |
          strip -R .note.ABI-tag /usr/lib/x86_64-linux-gnu/libQt5Core.so.5.11.3
          python manage.py collectstatic
          python manage.py makemigrations
          python manage.py migrate
          python manage.py sync_sigs
          exec uwsgi --ini /work/app-meeting-server/deploy/production/uwsgi.ini
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/meeting-server-test:v1.0.20221027152017
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        name: meetingserver
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1000Mi
          requests:
            cpu: 500m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /work/app-meeting-server/meetings/migrations
          name: container-mountpath
          subPath: migrations
        - mountPath: /work/app-meeting-server/share
          name: container-mountpath
          subPath: share
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: container-mountpath
        persistentVolumeClaim:
          claimName: meetings-data-volume
