common-applications/test-environment/opengauss-website-revision/meetingserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meetingserver-service
  namespace: opengauss-website-revision
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: meetingserver
  sessionAffinity: None
  type: ClusterIP
